force-app/main/default/objects/Pipeline_Action__c/Pipeline_Action__c.object-meta.xml
<CustomObject>
    <label>Pipeline Action</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Pipeline Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>