force-app/main/default/objects/Pipeline_Action__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Copado_Actions</valueSetName>
    </valueSet>
</CustomField>