force-app/main/default/objects/Pipeline_Action__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox lets you know if this pipeline action is used as default across all the environments in the pipeline.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>