force-app/main/default/objects/Pipeline_Action__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the environment where you want to override the default job template defined in the pipeline.</inlineHelpText>
    <label>Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Pipeline Actions</relationshipLabel>
    <relationshipName>Pipeline_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>