force-app/main/default/objects/Pipeline_Action__c/fields/Job_Template__c.field-meta.xml
<CustomField>
    <fullName>Job_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field defines the job template corresponding to the action being configured. If you want to select a different job template for this action in a particular environment, you will override the template set in the pipeline.</inlineHelpText>
    <label>Job Template</label>
    <referenceTo>JobTemplate__c</referenceTo>
    <relationshipLabel>Pipeline Actions</relationshipLabel>
    <relationshipName>Pipeline_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>