force-app/main/default/objects/Pipeline_Action__c/fields/Overrides_Pipeline_Action__c.field-meta.xml
<CustomField>
    <fullName>Overrides_Pipeline_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is automatically populated when you create a Pipeline Action record that is not the default one.</inlineHelpText>
    <label>Overrides Pipeline Action</label>
    <referenceTo>Pipeline_Action__c</referenceTo>
    <relationshipLabel>Overrides</relationshipLabel>
    <relationshipName>Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>