force-app/main/default/objects/Pipeline_Action__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <formula>TEXT(Pipeline__r.Platform__c)</formula>
    <inlineHelpText>This field is auto-populated based on the platform selected in the pipeline linked to this action.</inlineHelpText>
    <label>Platform</label>
    <type>Text</type>
</CustomField>